Added ARP network scan support
* README: Added more documentation, explain YAML file format
* YAML: Added ARP example and "ignore:" example
* Script:
:* Added Test_ARP class
:* Added user change and socket recovery in Test_SSH
:* Config class using exception (instead of sys.exit())
:* Config class added is in support
:* Different symbols for hosts going up and down, watching active or down.
:* Better YAML usage with default values in main()
:* Exception handling and reporting in main()

--- a/net_ntfy.yaml
+++ b/net_ntfy.yaml
@@ -19,4 +19,17 @@ tcp:
     host: 8.8.8.8
     port: 53
 
+# Scan networks by arp (root privileges needed)
+arp:
+  - period: 2  # Default is own local default route network.
+    timeout: 5
+    scan: 5
+    validation: 5
+  - period: 3
+    net: 10.8.0.0/24
+
+# Ignore devices e.g. moving around in WLAN.
+ignore:
+  - mac: eb:07:6a:26:41:4b
+
 #EOF
