--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-requests==2.32.3
-PyYAML==6.0.3
 certifi==2025.10.5
 charset-normalizer==3.4.4
 idna==3.11
+psutil==7.1.2
+PyYAML==6.0.3
+requests==2.32.3
+scapy==2.6.1
 urllib3==2.5.0
