--- a/net_ntfy_venv.service
+++ b/net_ntfy_venv.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/opt/net_ntfy/bin/python /opt/net_ntfy/net_ntfy.py
+ExecStart=/opt/net_ntfy/.venv/bin/python /opt/net_ntfy/net_ntfy.py
 WorkingDirectory=/opt/net_ntfy
 User=root
 Group=root
